fix: scan repositories having issues with virt threads
* the virtual threads somehow led to empty save files
* reinitialized the regular threads works like a charm now